bug alignment

--- a/style.css
+++ b/style.css
@@ -74,15 +74,51 @@ section{
 .story{
     display: flex;
     padding: 16px;
+    background-color: rgb(240, 233, 233);
+    border: 1px solid rgba(219,219,219,219,1);
+    border-radius: 3px;
+
+}
+.story .stories{
+    width: 17%;
+}
+.story .stories a img{
+border-radius: 50%;
+border: 2px solid #c62d8f;
+padding: 1px;
+object-fit: cover;
+}
+.story .stories p{
+    width: 90;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: #262626;
+}
+
+
+/*posts*/
+
+.posts{
+    margin: 25px 0;
     background-color: white;
-    border: 1px solid rgba(219,219,219,1)
-
-
-
-
-
-
-
+    border: 1px solid rgba(219,219,219,1);
+    border-radius: 3px;
+}
+.posts .post-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+}
+.posts .post-title .post-left{
+    display: flex;
+    align-items: center;
+}
+.posts .post-title .post-left .image img{
+    border-radius: 50%;
+    object-fit: contain;
+}
 .right-side{
     width: 35%;
 }
